feat: customer model
